--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,22 @@
-fastapi
-uvicorn[standard]
+
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch
+torchvision
+torchaudio
+
+fastapi[all]
+uvicorn
 python-dotenv
-requests
 langchain
 langchain-core
-langchain-groq
+langchain-openai
 langchain-community
+openai
 beautifulsoup4
 lxml
-chromadb
-sentence-transformers
-pypdf
 sec-api
-openai
-langchain-openai
+sentence-transformers>=2.2.0
+chromadb
+pydantic
+requests
+ast
